<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cadastro"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCadastroEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:textColorHint="@color/colorWhite"
        app:boxStrokeColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCadastroEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLowOpacity"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="255dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCadastroSenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorWhite"
        app:boxStrokeColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCadastroEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCadastroSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLowOpacity"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="255dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCadastroConfirmaSenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorWhite"
        app:boxStrokeColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCadastroSenha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCadastroConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLowOpacity"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="255dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonRegistrar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCadastroConfirmaSenha"
        app:strokeColor="@color/colorWhite" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_app_home_circle_round"
        android:contentDescription="@string/logo" />

    <ProgressBar
        android:id="@+id/progressBarCadastro"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageViewCadastroPassword"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutCadastroEmail"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutCadastroEmail"
        app:layout_constraintVertical_bias="0.256"
        app:srcCompat="@drawable/ic_baseline_email_24"
        android:contentDescription="@string/email_for_register" />

    <ImageView
        android:id="@+id/imageViewCadastroPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCadastroSenha"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutCadastroSenha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutCadastroSenha"
        app:srcCompat="@drawable/ic_baseline_lock_24"
        android:contentDescription="@string/password_for_register" />

    <ImageView
        android:id="@+id/imageViewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCadastroConfirmaSenha"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutCadastroConfirmaSenha"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCadastroPassword"
        app:layout_constraintVertical_bias="0.739"
        app:srcCompat="@drawable/ic_baseline_event_available_24"
        android:contentDescription="@string/confirm_password_image" />
</androidx.constraintlayout.widget.ConstraintLayout>